--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </head>
 <body>
     <header>
-        <h1>Tharun</h1>
-        <p>Ai Deloveper</p>
+        <h1>Kanivendhan</h1>
+        <p>Game Deloveper</p>
     </header>
 
     <nav>
@@ -79,7 +79,7 @@
     </div>
 
     <footer>
-        © 2024 Your Name
+        © 2024 Kanivendhan E
     </footer>
 </body>
 </html>
